--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "17": "^0.0.0",
+    "@ant-design/react-slick": "^0.28.4",
     "@headlessui/react": "^1.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
