--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
