--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "^17.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^4.0.0",
     "react-google-maps": "^9.4.5",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
